// https://learn.microsoft.com/en-us/aspnet/core/tutorials/grpc/grpc-start?view=aspnetcore-6.0&tabs=visual-studio-code
syntax = "proto3";

option csharp_namespace = "ServerStatusClient";

package greet;

// The greeting service definition.
service ServerStatus {
  // Sends a greetingcd
  rpc GetStatus (GetStatusRequest) returns (GetStatusResponse);
}

// The request message containing the user's name.
message GetStatusRequest {
  string name = 1;
}

// The response message containing the greetings.
message GetStatusResponse {
  string message = 1;
  repeated Disk Disks = 2;
}

message Disk {
  string name = 1;
  int64 available_free_space = 2;
  int64 total_free_space = 3;
  int64 total_size = 4;
}
